Possible fix to menu not sliding under on mobile

--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -113,7 +113,7 @@ main {
 }
 
 aside {
-  position: absolute;
+  position: fixed;
   right: 0;
   top: 55px;
   z-index: 1;
